# Sentinela_Digital

./: .coverage  .gitignore  App.jsx  LICENSE  README.md  api.py  gestao.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  requisitos.txt  todos_os_pacotes.txt  vite.config.js
modulos/: analise_codigo.py  escaneamento.py  gestao.py  pentest.py  sniffer.py  sniifer.py  snnifer.py  utilidades.py
relatorios/: relatorio_20260711_105105.json  relatorio_20260711_105105.txt  relatorio_20260712_015102.json  relatorio_20260712_015102.txt  relatorio_20260712_025537.json  relatorio_20260712_025537.txt  relatorio_20260712_032520.json  relatorio_20260712_032520.txt  relatorio_20260712_032558.json  relatorio_20260712_032558.txt  relatorio_20260712_032913.json  relatorio_20260712_032913.txt  relatorio_20260712_033836.json  relatorio_20260712_033836.txt  relatorio_20260712_034731.json  relatorio_20260712_034731.txt  relatorio_20260712_035001.json  relatorio_20260712_035001.txt  relatorio_20260712_035429.json  relatorio_20260712_035429.txt  relatorio_20260712_041113.json  relatorio_20260712_041113.txt  relatorio_20260712_041446.json  relatorio_20260712_041446.txt  relatorio_20260712_041825.json  relatorio_20260712_041825.txt  relatorio_20260712_042309.json  relatorio_20260712_042309.txt  relatorio_20260712_042419.json  relatorio_20260712_042419.txt  relatorio_20260712_042749.json  relatorio_20260712_042749.txt  relatorio_20260712_133031.json  relatorio_20260712_133031.txt  relatorio_20260712_134906.json  relatorio_20260712_134906.txt  (+219 more)
scanner/: README.md  (+3 more)
(+97 files in other folders)
