[tool.poetry]
name = "sentinela-digital"
version = "0.1.0"
description = "Dashboard do Sentinela Digital"
authors = ["Marcio Souza <seu-email@exemplo.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
