[tool.poetry]
name = "sentinela-digital"
version = "0.1.0"
description = "Dashboard do Sentinela Digital"
authors = ["Marcio Souza <seu-email@exemplo.com>"]
readme = "README.md"
package-mode = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.30.0"
